--- a/css/style.css
+++ b/css/style.css
@@ -12,3 +12,38 @@ html {
     font-family: 'Roboto', sans-serif;
 }
 
+
+#page-about .content {
+    width: 90%;
+    max-width: 1100px;
+    margin: 0 auto;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+}
+
+header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+header, ul {
+    display: flex;
+}
+
+header, ul, li {
+    margin: 10px;
+    list-style: none;
+}
+
+header, ul, li, a {
+    text-decoration: none;
+    color: #444;
+}
+
+header img {
+    width: 70px;
+    height: 70px;
+}
